--- a/day-8-schedules/daemonset.yaml
+++ b/day-8-schedules/daemonset.yaml
@@ -1,25 +1,25 @@
 apiVersion: apps/v1
-kind: DaemonSet
+kind: Deployment
 metadata:
-  name: nginx
+  name: myapp-deployment
+  labels:
+    app: webapp
+    type: front-end
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: webapp
+      type: front-end
   template:
     metadata:
       labels:
-        app: nginx
+        app: webapp
+        type: front-end
     spec:
       containers:
-      - name: test-nginx
+      - name: nginx-container
         image: nginx
-        ports:
-        - containerPort: 80
-        resources:
-          limits:
-            cpu: 100m
-            memory: 200Mi
-          requests:
-            cpu: 50m
-            memory: 100Mi
+      nodeSelector:
+       clr: green
+                          
