--- a/day-8-schedules/node-affinity-preffered.yaml
+++ b/day-8-schedules/node-affinity-preffered.yaml
@@ -1,28 +1,39 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: nginx-pref
+  name: nginx-pref-deployment
   labels:
     key: app
     value: blue
 spec:
-  containers:
-    - name: nginx
-      image: nginx
-  affinity:
-    nodeAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 1
-        preference:
-          matchExpressions:
-          - key: size
-            operator: In
-            values:
-            - medium
-      - weight: 50
-        preference:
-          matchExpressions:
-          - key: size
-            operator: In
-            values:
-            - small
+  replicas: 3
+  selector:
+    matchLabels:
+      key: app
+      value: blue
+  template:
+    metadata:
+      labels:
+        key: app
+        value: blue
+    spec:
+      containers:
+      - name: nginx
+        image: nginx
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            preference:
+              matchExpressions:
+              - key: size
+                operator: In
+                values:
+                - medium
+          - weight: 50
+            preference:
+              matchExpressions:
+              - key: size
+                operator: In
+                values:
+                - small
