--- a/day-8-schedules/node-affinity-required.yaml
+++ b/day-8-schedules/node-affinity-required.yaml
@@ -1,22 +1,33 @@
-apiVersion: v1
-kind: Pod
+
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: nginx-test
+  name: nginx-deployment
   labels:
+    app: webapp
+    type: front-end
+spec:
+  replicas: 3  # Number of pod replicas
+  selector:
+    matchLabels:
       app: webapp
       type: front-end
-spec:
-  containers:
-  - name: nginx
-    image: nginx:latest
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: size
-            operator: In
-            values:
-            - medium
-            - small
-
+  template:
+    metadata:
+      labels:
+        app: webapp
+        type: front-end
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:latest
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: size
+                    operator: In
+                    values:
+                      - medium
+                      - small
