--- a/day-8-schedules/taint_tolerations.yaml
+++ b/day-8-schedules/taint_tolerations.yaml
@@ -1,16 +1,27 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: nginx-t
+  name: nginx-deployment
   labels:
     key: app
     value: blue
 spec:
-  containers:
-    - name: nginx
-      image: nginx
-  tolerations:
-  - key: "app"
-    operator: "Equal"
-    value: "blue"
-    effect: "NoSchedule"
+  replicas: 3  # Adjust the number of replicas as needed
+  selector:
+    matchLabels:
+      key: app
+      value: blue
+  template:
+    metadata:
+      labels:
+        key: app
+        value: blue
+    spec:
+      containers:
+        - name: nginx
+          image: nginx
+      tolerations:
+        - key: "app"
+          operator: "Equal"
+          value: "blue"
+          effect: "NoSchedule"
