--- a/day-5-ingress/ingress.yml
+++ b/day-5-ingress/ingress.yml
@@ -12,21 +12,21 @@ spec:
   rules:
   - http:
       paths:
-      - path: /nginx(/|$)(.*)
+      - path: /nginx
         pathType: Prefix
         backend:
           service:
             name: nginx
             port:
               number: 80
-      - path: /httpd(/|$)(.*)
+      - path: /httpd
         pathType: Prefix
         backend:
           service:
             name: httpd
             port:
               number: 80
-      - path: /(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
