--- a/day-8-schedules/nodeselector.yaml
+++ b/day-8-schedules/nodeselector.yaml
@@ -1,13 +1,23 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: myapp
+  name: myapp-deployment
   labels:
-      app: webapp
-      type: front-end
+    app: webapp
+    type: front-end
 spec:
-  containers:
-  - name: nginx-container 
-    image: nginx
-  nodeSelector:
-    clr: pink
+  replicas: 2  # You can change the number of replicas as needed
+  selector:
+    matchLabels:
+      app: webapp
+  template:
+    metadata:
+      labels:
+        app: webapp
+        type: front-end
+    spec:
+      containers:
+      - name: nginx-container
+        image: nginx
+      nodeSelector:
+        clr: pink
