--- a/day-10-volumes/dynamic_volume_provision/dep.yml
+++ b/day-10-volumes/dynamic_volume_provision/dep.yml
@@ -1,51 +1,41 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: mongodb
+  name: mysql
 spec:
-  serviceName: mongodb
+  serviceName: mysql
   replicas: 3
   selector:
     matchLabels:
-      app: mongodb
+      app: mysql
   template:
     metadata:
       labels:
-        app: mongodb
+        app: mysql
     spec:
       containers:
-        - name: mongodb
-          image: mongo
+        - name: mysql
+          image: mysql:8.0
           ports:
-            - containerPort: 27017
+            - containerPort: 3306
           env:
-            - name: MONGO_INITDB_ROOT_USERNAME
-              value: admin
-            - name: MONGO_INITDB_ROOT_PASSWORD
+            - name: MYSQL_ROOT_PASSWORD
               value: testtesttest
+            - name: MYSQL_USER
+              value: myuser
+            - name: MYSQL_PASSWORD
+              value: mypassword
+            - name: MYSQL_DATABASE
+              value: mydatabase
           volumeMounts:
-            - name: mongodb-data
-              mountPath: /data/db
+            - name: mysql-data
+              mountPath: /var/lib/mysql
   volumeClaimTemplates:
     - metadata:
-        name: mongodb-data
+        name: mysql-data
       spec:
         accessModes: ["ReadWriteOnce"]
         storageClassName: ebs-storage
         resources:
           requests:
             storage: 1Gi
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mongodb
-spec:
-  selector:
-    app: mongodb
-  ports:
-    - protocol: TCP
-      port: 27017
-      targetPort: 27017
-  clusterIP: None
-
